tests/gateway-api-migration/fixtures/traefik-source-minimal/input/common.service/overlays/dev/argocd-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
spec:
  ingressClassName: traefik
  tls:
  - hosts: ["argocd.dev.awoo.org"]
    secretName: argocd-server-tls
  rules:
  - host: argocd.dev.awoo.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
